--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
     "indent": ["error", 2],
+    "no-unused-vars": "off",
     "linebreak-style": ["error", "windows"],
     "quotes": ["error", "single"],
     "semi": ["error", "never"]
